# cbai-db

./: README.md  activation_patching.py  analyze_results.py  debug_predictions.py  debug_tokens.py  evaluate_models.py  extract_examples.py  extract_gemma_pairs.py  extract_medium_pairs.py  find_different_predictions.py  find_gemma_different_predictions.py  find_medium_different_predictions.py  gemma_2b_1k_results.json  gemma_2b_different_prediction_pairs.json  gemma_2b_example_pairs.json  gemma_2k_results.json  gemma_example_pairs.json  generate_dataset.py  gpt2_2k_results.json  gpt2_different_prediction_pairs.json  gpt2_example_pairs.json  gpt2_medium_1k_results.json  gpt2_medium_different_prediction_pairs.json  gpt2_medium_example_pairs.json  gpt2_patching_results.json  phi2_2k_results.json  phi2_example_pairs.json  pyproject.toml  requirements.txt  running_count_analysis.py  visualize_patching.py  word_counting_dataset.json
results_different/: aggregate_results.json
results_fixed/: aggregate_results.json
results_gemma_2b/: aggregate_results.json
results_gpt2_medium/: aggregate_results.json
