[project]
name = "word-counting-dataset"
version = "0.1.0"
description = "Generate word counting datasets for LLM evaluation"
requires-python = ">=3.8"
dependencies = [
    "nltk==3.8.1",
    "tqdm==4.66.1",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",
    "accelerate>=0.25.0",  # For device mapping
    "pandas>=2.0.0",       # For results analysis
    "matplotlib>=3.7.0",   # For plotting
    "seaborn>=0.12.0",    # For prettier plots
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 